@@ -510,6 +510,18 @@ your <cstring> header.
 This may be because your implementation strerror() is threadsafe, in which case
 there is nothing to worry about.
 ])
+else
+AC_MSG_CHECKING([for GNU-style strerror_r])
+gnu_strerror_r=yes
+AC_TRY_COMPILE(
+	[#include <cstring>
+	${usestd}
+	const char *it_is_a_string(char *x) { return strerror_r(0,x,10); }],
+	[],
+	[AC_DEFINE(
+		PQXX_HAVE_STRERROR_R_GNU,1,[Define for GNU-style strerror_r])],
+	[gnu_strerror_r=no])
+AC_MSG_RESULT($gnu_strerror_r)
 fi # strerror_r
 
 
